ecmascript/parser/tests/typescript-errors/custom/issue-380/input.ts.stderr
error: Expected an expression
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:15
  |
3 |         import(../foo/bar)
  |               ^

error[1005]: Expected ')'
 --> $DIR/tests/typescript-errors/custom/issue-380/input.ts:3:16
  |
3 |         import(../foo/bar)
  |                ^

